kubernetes/relayer.staging.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relayer-email-auth
  namespace: ar-base-sepolia-staging
  labels:
    app: relayer
spec:
  selector:
    matchLabels:
      app: relayer
  template:
    metadata:
      labels:
        app: relayer
    spec:
      containers:
        - name: relayer-container
          image: us-central1-docker.pkg.dev/zkairdrop/ether-email-auth/relayer:v2
          ports:
            - containerPort: 4500
          livenessProbe:
            httpGet:
              path: /api/echo
              port: 4500
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/echo
              port: 4500
            initialDelaySeconds: 60
            periodSeconds: 30
          volumeMounts:
            - name: pem-volume
              mountPath: "/relayer/packages/relayer/.ic.pem"
              subPath: ".ic.pem"
        - name: smtp-container
          image: bisht13/relayer-smtp-new:latest
          ports:
            - containerPort: 8080
        - name: imap-container
          image: bisht13/relayer-imap-new:latest
      volumes:
        - name: pem-volume
          secret:
            secretName: relayer-secret-email-auth
            items:
              - key: ICPEM
                path: ".ic.pem"
---
apiVersion: v1
kind: Service
metadata:
  name: relayer-svc-email-auth
  namespace: ar-base-sepolia-staging
spec:
  selector:
    app: relayer
  ports:
    - protocol: TCP
      port: 443
      targetPort: 4500
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: relayer-smtp-svc
  namespace: ar-base-sepolia-staging
spec:
  selector:
    app: relayer
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080
  type: ClusterIP
